Corrected overflow/Completed skeleton

--- a/services/landing/index.css
+++ b/services/landing/index.css
@@ -2,12 +2,17 @@ html,
 body,
 #app {
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
+  height: fit-content;
   overscroll-behavior: none;
   font-family: var(--font-family-base);
   -webkit-font-smoothing: antialiased;
   font-synthesis: style;
   text-rendering: optimizeLegibility;
+}
+
+body {
+  overflow-y: auto;
 }
 
 a {
@@ -64,13 +69,13 @@ html.dark {
 }
 
 :root {
-  --skeleton-color-2: rgba(235, 235, 245, 0.6);
-  --skeleton-color-3: rgba(235, 235, 245, 0.38);
+  --skeleton-color-1: rgba(182, 182, 193, 0.7);
+  --skeleton-color-2: rgba(182, 182, 193, 0.3);
 }
 
 .dark {
-  --skeleton-color-2: rgba(60, 60, 67, 0.78);
-  --skeleton-color-3: rgba(60, 60, 67, 0.56);
+  --skeleton-color-1: rgba(56, 56, 64, 0.8);
+  --skeleton-color-2: rgba(56, 56, 64, 0.4);
 }
 
 :root {
